[bugfix] what: 1.  全屏切换后，有些元素在弹幕容器外飘着，加 overflow:hidden Why: How:

--- a/src/danmu.css
+++ b/src/danmu.css
@@ -5,6 +5,7 @@ chimee-danmu{
   display: block;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 chimee-danmu>div{
